--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "influxdb-client": "^0.0.1",
     "pg": "^8.11.3"
   }
 }
