--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "influxdb-client": "^0.0.1",
     "pg": "^8.11.3"
   }
 }
