--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@influxdata/influxdb-client": "^1.33.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "pg": "^8.11.3"
   }
 }
