--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "memorystore": "^1.6.7",
     "pg": "^8.11.3"
   }
 }
