--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "memorystore": "^1.6.7",
     "pg": "^8.11.3"
   }
