--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "memorystore": "^1.6.7",
+    "nodemailer": "^6.9.16",
     "pg": "^8.11.3"
   }
 }
